[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13",
    "ninja",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://peps.python.org/pep-0621/
name = "sharpness-assessment"
authors = [{ name = "Andreu Gimenez", email = "esdandreu@gmail.com" }]
description = "A minimal C++ extension using pybind11 and vcpkg"
readme = "README.md"
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.7"
keywords = ["example", "vcpkg", "pybind11", "scikit-build", "cpp"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/esdandreu/python-extension-cpp"
repository = "https://github.com/esdandreu/python-extension-cpp"

[project.optional-dependencies]
# When adding `[test]` to your `pip install` command you can install the extra
# dependencies associated with testing. Example `pip install .[test]`
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
test = ["pytest"]

[tool.scikit-build]
install.strip = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

# Install system library
[tool.cibuildwheel.linux]
before-all = [
    "apt-get update",
    "apt-get install -y bison python3 python3-pip python3-jinja2 meson wget build-essential gcc g++ autopoint autoconf automake libtool pkg-config cmake git curl zip unzip tar libx11-dev libxft-dev gperf libgles2-mesa-dev libxext-dev libxrandr-dev libxi-dev libxcursor-dev libxdamage-dev libxinerama-dev libxi-dev libxtst-dev libdbus-1-dev",
    "python3 -m pip install setuptools jinja2"
]